--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <link rel="shoticon" href="src/favicon.ico" type="image/x-icon">
+  <link rel="shoticon" href="docs/favicon.ico" type="image/x-icon">
   <meta name="viewport" content="width=device-width,height=device-height,initial-scale=1,user-scalable=0">
   <meta name="description" content="一款简单易用的微信公众号格式化工具，主要针对代码做格式化处理。">
   <title>Online Markdown Converter</title>
-  <script src="src/js/index.js"></script>
-  <link rel="stylesheet" href="src/css/themes/github-v2.css" id="codeThemeId" />
+  <script src="docs/js/index.js"></script>
+  <link rel="stylesheet" href="docs/themes/github-v2.css" id="codeThemeId" />
   <link rel="stylesheet" id="pageThemeId" />
 </head>
 <body>
